test/errors/parser/syntax_unexpected_rparen.ms
a = 1)
// Compiler Error: got RParen where EOL is required
